Switching cause and consequence in Java 9